--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -27,15 +27,15 @@
 
 [[constraint]]
   branch = "master"
-  name = "github.com/idata-shopee/gopcp"
+  name = "github.com/lock-free/gopcp"
 
 [[constraint]]
   branch = "master"
-  name = "github.com/idata-shopee/gopcp_rpc"
+  name = "github.com/lock-free/gopcp_rpc"
 
 [[constraint]]
   branch = "master"
-  name = "github.com/idata-shopee/gopcp_stream"
+  name = "github.com/lock-free/gopcp_stream"
 
 [prune]
   go-tests = true
